k8s/platform/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: toggle-master
  labels:
    app.kubernetes.io/name: toggle-master
    app.kubernetes.io/part-of: toggle-master
